# fluid-rs

./: Cargo.toml  README.md  index.html  justfile
src/: eulerian_fluid.rs  main.rs
