[package]
name = "fluid_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14" }
bevy_egui = { version = "0.28", default-features = true }
bevy_mod_picking = { version = "0.20.1", default-features = false, features = [ "backend_egui", "backend_raycast", "backend_sprite" ] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3