[package]
name = "fluid_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14" }
bevy_egui = { version = "0.28", default-features = true }
bevy_mod_picking = { version = "0.20.1", default-features = false, features = [ "backend_egui", "backend_raycast", "backend_sprite" ] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in wasm-release mode to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# This doesn't increase compilation times compared to -O3, great improvements.
opt-level = "s"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"
